# beat-extractor

./: Cargo.toml  build.rs  windows_icon.rc
.github/: build.sh
.github/workflows/: build.sh  rust.yml
src/: main.rs
