[package]
name = "beat_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
image = "0.25.2"
notify = "6.1.1"
zip = "2.1.6"

[target.'cfg(target_os="windows")'.dependencies.tray-item]
version = "0.10.0"

[target.'cfg(target_os="linux")'.dependencies.tray-item]
version = "0.10.0"
features = ["ksni"]

[target.'cfg(target_os="linux")'.dependencies.libdbus-sys]
version = "0.2.5"
features = ["vendored"]

[build-dependencies]
embed-resource = "2.4.3"